Fixed nav links not working and misalignment in IE/Edge

--- a/style/global.css
+++ b/style/global.css
@@ -55,7 +55,6 @@ main {
 main nav {
     width: 0.8in;
     background: #1e0309;
-    flex-shrink: 0;
 }
 
 .nav-list {
@@ -71,11 +70,10 @@ main nav {
     width: 0.8in;
     height: 0.8in;
     background: #1e0309 50% 25% / 45% no-repeat;
-    line-height: 0;
+    line-height: 0; /* Fix for misalignment in chrome */
 }
 
 .nav-icon a {
-    padding-top: 0.05in;
     color: #ffbd1b;
     font-family: sans-serif;
     font-size: 1rem;
@@ -85,25 +83,23 @@ main nav {
 
 .nav-label {
     width: 100%;
-    height: 0px;
+    height: 0.8in;
     text-align: center;
     line-height: 1.3in;
 }
 
 .nav-flyout {
-    position: relative;
-    z-index: 1;
-    display: inline-block;
+    float: left;
     overflow: hidden;
     width: auto;
     max-width: 0;
     height: 0.8in;
     padding: 0;
-    margin: 0 0 0 0.8in;
+    margin: -0.8in 0 0 0.8in;
     background: #1e0309;
     border-radius: 0 0.08in 0.08in 0;
-    box-shadow: 0 0 0.05in 0px rgba(0, 0, 0, 1);
-    font-size: 0;
+    box-shadow: 0.05in 0.03in 0.1in 0px rgba(0, 0, 0, 0.6);
+    font-size: 0; /* Fix for misalignment in IE/Edge */
     list-style-type: none;
     white-space: nowrap;
     transition: all ease-in-out 0.25s;
@@ -122,10 +118,6 @@ main nav {
 .nav-icon:hover {
     background-size: 55%;
 }
-
-/*.nav-icon:hover a{
-    color: #C9572C;
-}*/
 
 .w3c-validator {
     position: fixed;
